syntax="proto3";

package genproto;
option go_package="genproto/book_service";
import "book.proto";


service CategoryService {
    rpc Create(CreateCategoryRequest) returns (Category) {}
    rpc GetAll(GetAllCategoryRequest) returns (GetAllCategoryResponse) {}
    rpc Get(CategoryId) returns (Category) {}
    rpc Update(Category) returns (Result) {}
    rpc Delete(CategoryId) returns (Result) {}
}

message CreateCategoryRequest {
    string category_name = 1;
}

message Category {
    string id = 1;
    string category_name = 2;
}

message CategoryId {
    string id = 1;
}

message GetAllCategoryRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllCategoryResponse {
    repeated Category categories = 1;
    int32 count = 2;
}
